tryphon_macros/tests/ui/fail/empty_env_name.rs
use tryphon::Config;

#[derive(Config)]
struct BadConfig {
    #[env("")]
    host: String,
}

fn main() {}
